<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/settingsFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="app.baldphone.neo.settings.ui.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settings_to_calls"
            app:destination="@id/callsSettingsFragment" />
        <action
            android:id="@+id/action_settings_to_home"
            app:destination="@id/homeSettingsFragment" />
        <action
            android:id="@+id/action_settings_to_appearance"
            app:destination="@id/appearanceSettingsFragment" />
        <action
            android:id="@+id/action_settings_to_accessibility"
            app:destination="@id/accessibilitySettingsFragment" />
        <action
            android:id="@+id/action_settings_to_system"
            app:destination="@id/systemSettingsFragment" />
        <action
            android:id="@+id/action_settings_to_suppport"
            app:destination="@id/settingsAboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/callsSettingsFragment"
        android:name="app.baldphone.neo.settings.ui.CallsSettingsFragment"
        android:label="@string/settings_section_calls">
    </fragment>

    <!-- HOME SCREEN -->
    <fragment
        android:id="@+id/homeSettingsFragment"
        android:name="app.baldphone.neo.settings.home.HomeSettingsFragment"
        android:label="@string/settings_home_screen" />

    <!-- APPEARANCE -->
    <fragment
        android:id="@+id/appearanceSettingsFragment"
        android:name="app.baldphone.neo.settings.appearance.AppearanceSettingsFragment"
        android:label="@string/settings_appearance" />

    <!-- ACCESSIBILITY -->
    <fragment
        android:id="@+id/accessibilitySettingsFragment"
        android:name="app.baldphone.neo.settings.accessibility.AccessibilitySettingsFragment"
        android:label="@string/accessibility_settings" />

    <!-- SYSTEM -->
    <fragment
        android:id="@+id/systemSettingsFragment"
        android:name="app.baldphone.neo.settings.system.SystemSettingsFragment"
        android:label="@string/settings_system">
        <action
            android:id="@+id/action_system_to_permissions"
            app:destination="@id/permissionsFragment" />
    </fragment>

    <fragment
        android:id="@+id/permissionsFragment"
        android:name="app.baldphone.neo.settings.system.PermissionsFragment"
        android:label="@string/permissions_part">
        <deepLink app:uri="myapp://settings/system/permissions" />
    </fragment>

    <!-- HELP -->
    <fragment
        android:id="@+id/settingsAboutFragment"
        android:name="app.baldphone.neo.settings.help.SettingsAboutFragment"
        android:label="@string/about">
        <deepLink app:uri="myapp://settings/about" />
        <action
            android:id="@+id/action_about_to_license"
            app:destination="@id/licenseFragment" />
    </fragment>

    <fragment
        android:id="@+id/licenseFragment"
        android:name="app.baldphone.neo.settings.help.LicenseFragment"
        android:label="@string/about_app_license" />
</navigation>
