<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <app.baldphone.neo.views.SettingsSwitchButton
        android:id="@+id/bt_confirm_calls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:switchDescriptionOff="@string/setting_confirm_before_calling_desc_off"
        app:switchDescriptionOn="@string/setting_confirm_before_calling_desc_on"
        app:switchTitle="@string/setting_confirm_before_calling" />

    <include
        android:id="@+id/row_dialer_sounds"
        layout="@layout/item_setting_switch"
        android:layout_width="match_parent"
        android:layout_height="96dp" />

    <include
        android:id="@+id/row_dual_sim"
        layout="@layout/item_setting_switch"
        android:layout_width="match_parent"
        android:layout_height="96dp" />

    <include
        android:id="@+id/row_alarm_volume"
        layout="@layout/item_setting"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

</LinearLayout>
